add notifications, get-refs, serverApi files

--- a/src/partials/created-todo.html
+++ b/src/partials/created-todo.html
@@ -9,11 +9,11 @@
         <p class="add-todo__text">Created new ToDo</p>
         <label class="add-todo__label">
             <span class="add-todo-information">Title</span>
-            <input class="add-todo__input" type="text"  autocomplete="off" placeholder="Add title your new todo" />
+            <input class="add-todo__input" type="text" id="title" autocomplete="off" placeholder="Add title your new todo" />
         </label>
         <label class="add-todo__label">
             <span class="add-todo-information">Content</span>
-            <input class="add-todo__input" type="text" autocomplete="off" placeholder="Add content your new todo" />
+            <input class="add-todo__input" id="content" type="text" autocomplete="off" placeholder="Add content your new todo" />
         </label>
         <label for="category">Category</label>
         <select id="category" name="category">
