render todo finished

--- a/src/partials/active-notes-table.html
+++ b/src/partials/active-notes-table.html
@@ -1,8 +1,9 @@
-<section class="active-notes__table"> 
+<section class="active-notes__section"> 
     <h2>Active notes</h2>
     <table>
         <thead>
             <tr>
+                <th></th>
                 <th>Title</th>
                 <th>Created</th>
                 <th>Category</th>
@@ -13,7 +14,7 @@
                 <th>Delete</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="active-notes__table">
         </tbody>
         </table>
 </section>
