--- a/src/partials/archived-notes-table.html
+++ b/src/partials/archived-notes-table.html
@@ -1,4 +1,4 @@
-<section class="archived-notes__table">
+<section class="archived-notes__section">
     <h2>Archived notes</h2>
     <button type="button">Show archived notes</button>
     <table>
@@ -10,7 +10,7 @@
                 <th>Unarchived</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="archived-notes__table">
         </tbody>
     </table>
     <button type="button">Hide archived notes</button>
