--- a/src/partials/all-notes-table.html
+++ b/src/partials/all-notes-table.html
@@ -1,4 +1,4 @@
-<section class="all-notes__table">
+<section class="all-notes__section">
     <h2>All your notes</h2>
     <button type="button">Show information about all notes</button>
     <table>
@@ -7,9 +7,10 @@
                 <th>Note Category</th>
                 <th>Active</th>
                 <th>Archived</th>
+                <th>Total</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="all-notes__table">
         </tbody>
     </table>
     <button type="button">Hide information about all notes</button>
