update js files, add TodoApp class

--- a/src/partials/active-notes-table.html
+++ b/src/partials/active-notes-table.html
@@ -1,6 +1,6 @@
 <section class="active-notes__section"> 
     <h2>Active notes</h2>
-    <table>
+    <table class="active-notes__table">
         <thead>
             <tr>
                 <th></th>
@@ -14,7 +14,7 @@
                 <th>Delete</th>
             </tr>
         </thead>
-        <tbody class="active-notes__table">
+        <tbody class="active-notes__row">
         </tbody>
         </table>
 </section>
