--- a/src/partials/created-todo.html
+++ b/src/partials/created-todo.html
@@ -25,7 +25,7 @@
         <label for="category">Category</label>
         <select id="category" name="category" class="category">
             <option class="category__option" value="task">Task</option>
-            <option class="category__option" value="rand-thought">Random Thought</option>
+            <option class="category__option" value="random-thought">Random Thought</option>
             <option class="category__option" value="idea" selected>Idea</option>
             <option class="category__option" value="quote">Quote</option>
         </select>
