--- a/src/templates/archivedNotes.hbs
+++ b/src/templates/archivedNotes.hbs
@@ -4,7 +4,7 @@
     <td>{{this.created}}</td>
     <td>{{this.category}}</td>
     <td>
-        <button type="button" class="unarchived-todo__btn button" id={{this.id}}>
+        <button type="button" id='unarchiveBtn-{{this.id}}' class="unarchived-todo__btn button" id={{this.id}}>
              <i class="material-icons">unarchive</i>
         </button>
     </td>
