finished work with buttons

--- a/src/partials/archived-notes-table.html
+++ b/src/partials/archived-notes-table.html
@@ -1,7 +1,7 @@
 <section class="archived-notes__section">
     <h2>Archived notes</h2>
     <button type="button">Show archived notes</button>
-    <table>
+    <table class="archived-notes__table">
         <thead>
             <tr>
                 <th>Title</th>
@@ -10,7 +10,7 @@
                 <th>Unarchived</th>
             </tr>
         </thead>
-        <tbody class="archived-notes__table">
+        <tbody class="archived-notes__row">
         </tbody>
     </table>
     <button type="button">Hide archived notes</button>
