--- a/src/templates/activeNotes.hbs
+++ b/src/templates/activeNotes.hbs
@@ -8,8 +8,8 @@
     <td>{{this.content}}</td>
     <td>{{this.dates}}</td>
     <td>
-        <button type="button" id='{{this.id}}-editBtn' class="edit-todo__btn button">
-             <i class="material-icons">edit</i>
+        <button type="button"  class="edit-todo__btn button">
+             <i class="material-icons" id='{{this.id}}-editBtn'>edit</i>
         </button>
     </td>
     <td>
