--- a/src/templates/archivedNotes.hbs
+++ b/src/templates/archivedNotes.hbs
@@ -4,8 +4,8 @@
     <td>{{this.created}}</td>
     <td>{{this.category}}</td>
     <td>
-        <button type="button" id='unarchiveBtn-{{this.id}}' class="unarchived-todo__btn button" id={{this.id}}>
-             <i class="material-icons">unarchive</i>
+        <button type="button"  class="unarchived-todo__btn button" id={{this.id}}>
+             <i class="material-icons" id='{{this.id}}-unarchiveBtn'>unarchive</i>
         </button>
     </td>
 </tr>
