--- a/src/partials/all-notes-table.html
+++ b/src/partials/all-notes-table.html
@@ -9,7 +9,7 @@
                 <th>Total</th>
             </tr>
         </thead>
-        <tbody class="all-notes__table">
+        <tbody class="all-notes__row">
         </tbody>
     </table>
 </section>
