--- a/src/partials/active-notes-table.html
+++ b/src/partials/active-notes-table.html
@@ -1,15 +1,16 @@
-<section class="active-notes__section"> 
-    <h2>Active notes</h2>
-    <table class="active-notes__table">
+<section class="active-notes__section  container"> 
+  <h2>Active notes</h2>
+    <div class="table-responsive">
+    <table class="active-notes__table table table-striped">
         <thead>
-            <tr>
+            <tr class="table-primary dark">
                 <th></th>
                 <th>Title</th>
                 <th>Created</th>
                 <th>Category</th>
                 <th>Content</th>
                 <th>Dates</th>
-                <th>Edit</th>
+                <th class="center">Edit</th>
                 <th>Archived</th>
                 <th>Delete</th>
             </tr>
@@ -17,4 +18,5 @@
         <tbody class="active-notes__row">
         </tbody>
         </table>
+    </div>
 </section>
