--- a/src/partials/all-notes-table.html
+++ b/src/partials/all-notes-table.html
@@ -1,8 +1,9 @@
-<section class="all-notes__section">
+<section class="all-notes__section container">
     <h2>All your notes</h2>
-    <table>
+    <div class="all-notes__wrap">
+    <table class="table table-striped center">
         <thead>
-            <tr>
+            <tr class="table-info dark">
                 <th>Note Category</th>
                 <th>Active</th>
                 <th>Archived</th>
@@ -12,4 +13,5 @@
         <tbody class="all-notes__row">
         </tbody>
     </table>
+    </div>
 </section>
