--- a/src/templates/activeNotes.hbs
+++ b/src/templates/activeNotes.hbs
@@ -7,19 +7,19 @@
     <td>{{this.category}}</td>
     <td>{{this.content}}</td>
     <td>{{this.dates}}</td>
-    <td>
-        <button type="button"  class="edit-todo__btn button">
-             <i class="material-icons" id='{{this.id}}-editBtn'>edit</i>
+    <td class="center">
+        <button type="button"  class="edit-todo__btn btn">
+             <i class="material-icons edit" id='{{this.id}}-editBtn'>edit</i>
         </button>
     </td>
-    <td>
-        <button type="button"  class="archived-todo__btn button">
-            <i class="material-icons" id='{{this.id}}-archiveBtn'>archive</i>
+    <td class="center">
+        <button type="button"  class="archived-todo__btn btn">
+            <i class="material-icons archive" id='{{this.id}}-archiveBtn'>archive</i>
         </button>
     </td>
-    <td>
-        <button type="button" class="delete-todo__btn button">
-            <i class="material-icons" id='{{this.id}}-deleteBtn'>remove</i>
+    <td class="center">
+        <button type="button" class="delete-todo__btn btn">
+            <i class="material-icons remove" id='{{this.id}}-deleteBtn'>remove</i>
         </button>
     </td>
 </tr>
