--- a/src/partials/archived-notes-table.html
+++ b/src/partials/archived-notes-table.html
@@ -1,17 +1,18 @@
-<section class="archived-notes__section">
+<section class="archived-notes__section container">
     <h2>Archived notes</h2>
-    <button type="button">Show archived notes</button>
-    <table class="archived-notes__table">
+    <button type="button" class="btn btn-secondary button" id="showBtnArchiv">Hide</button>
+    <div class="archived-notes__wrap">
+    <table class="archived-notes__table table table-striped">
         <thead>
-            <tr>
+            <tr class="table-success dark">
                 <th>Title</th>
                 <th>Created</th>
                 <th>Category</th>
-                <th>Unarchived</th>
+                <th class="center">Unarchived</th>
             </tr>
         </thead>
         <tbody class="archived-notes__row">
         </tbody>
     </table>
-    <button type="button">Hide archived notes</button>
+    </div>
 </section>
