--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,4 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+@import './container';
+@import './common';
+@import './icons';
 
-// Стили для файла с примером HTML-фрагмента
-@import './example';
