--- a/src/templates/archivedNotes.hbs
+++ b/src/templates/archivedNotes.hbs
@@ -3,9 +3,9 @@
     <td>{{this.title}}</td>
     <td>{{this.created}}</td>
     <td>{{this.category}}</td>
-    <td>
-        <button type="button"  class="unarchived-todo__btn button" id={{this.id}}>
-             <i class="material-icons" id='{{this.id}}-unarchiveBtn'>unarchive</i>
+    <td class="center">
+        <button type="button"  class="unarchived-todo__btn btn" id={{this.id}}>
+             <i class="material-icons unarchived" id='{{this.id}}-unarchiveBtn'>unarchive</i>
         </button>
     </td>
 </tr>
