--- a/src/partials/active-notes-table.html
+++ b/src/partials/active-notes-table.html
@@ -1,7 +1,7 @@
 <section class="active-notes__section  container"> 
   <h2>Active notes</h2>
     <div class="table-responsive">
-    <table class="active-notes__table table table-striped">
+    <table class="active-notes__table table table-striped table-condensed">
         <thead>
             <tr class="table-primary dark">
                 <th></th>
