--- a/src/partials/all-notes-table.html
+++ b/src/partials/all-notes-table.html
@@ -1,7 +1,7 @@
 <section class="all-notes__section container">
     <h2>All your notes</h2>
     <div class="all-notes__wrap">
-    <table class="table table-striped center">
+    <table class="table table-striped center table-condensed">
         <thead>
             <tr class="table-info dark">
                 <th>Note Category</th>
