--- a/src/partials/archived-notes-table.html
+++ b/src/partials/archived-notes-table.html
@@ -2,7 +2,7 @@
     <h2>Archived notes</h2>
     <button type="button" class="btn btn-secondary button" id="showBtnArchiv">Hide</button>
     <div class="archived-notes__wrap">
-    <table class="archived-notes__table table table-striped">
+    <table class="archived-notes__table table table-striped table-condensed">
         <thead>
             <tr class="table-success dark">
                 <th>Title</th>
